# infer-x

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  config.yaml  downloader.py  main.py  manager.py  models.py  monitor.py  pyproject.toml  requirements.txt  router.py  setup.py
src/infer_helper/: __init__.py  downloader.py  main.py  manager.py  models.py  monitor.py  router.py
src/infer_helper/backends/: __init__.py  llamacpp.py  openvino.py  tensorrt_llm.py  vllm.py
src/inferx/: __init__.py  benchmark.py  benchmark_web.py  cache.py  config.py  downloader.py  health_checker.py  log_reader.py  logging.py  main.py  manager.py  model_service.py  models.py  monitor.py  monitoring.py  params.py  port_manager.py  process_lifecycle.py  process_manager.py  router.py  utils.py  vllm_signal_wrapper.py
src/inferx/backends/: __init__.py  _utils.py  base.py  llamacpp.py  lmdeploy.py  ollama.py  openvino.py  registry.py  sglang.py  tensorrt_llm.py  tgi.py  vllm.py
src/inferx/models/: __init__.py  config.py  download.py  enums.py  instance.py  log.py  model.py  params.py  preset.py  system.py
src/inferx/monitoring/: __init__.py  alerts.py  audit.py  usage.py
src/inferx/routes/: __init__.py  benchmark.py  instances.py  models.py  monitoring.py  presets.py  system.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_backends.py  test_benchmark.py  test_config.py  test_models.py  test_monitoring.py  test_web.py
