[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "infer-helper"
version = "1.0.0"
description = "Multi-backend inference engine management tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "nvidia-ml-py>=12.0.0",
    "huggingface-hub>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
infer-helper = "infer_helper.main:main"

[tool.setuptools.packages.find]
where = ["src"]
